plugins {
    id 'java-library'
    id 'maven-publish'
    id 'me.champeau.jmh' version '0.7.2'
}

group = 'com.github.lemadane'
version = (project.hasProperty('version') && !'unspecified'.equals(project.property('version'))) ? project.property('version') : '1.2.1'

ext {
    bootVersion = project.hasProperty('springBootVersion') ? project.property('springBootVersion') : '3.4.2'
    set('spring-boot.version', bootVersion)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    // Pure Core engine has ZERO runtime dependencies!
    // Optional Spring MVC integration module dependencies (compileOnly / testImplementation):
    compileOnly platform("org.springframework.boot:spring-boot-dependencies:${bootVersion}")
    compileOnly 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.springframework.boot:spring-boot-starter-json'
    
    testImplementation platform("org.springframework.boot:spring-boot-dependencies:${bootVersion}")
    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

javadoc {
    if (JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
    options.addStringOption('Xdoclint:none', '-quiet')
}

base {
    archivesName = 'jssr'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'jssr'
            pom {
                name = 'JSSR'
                description = 'Java Server-Side Rendering (JSSR) Engine'
                url = 'https://github.com/lemadane/JSSR'
                licenses {
                    license {
                        name = 'The MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }
                developers {
                    developer {
                        id = 'lemadane'
                        name = 'Lemuel'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/lemadane/JSSR.git'
                    developerConnection = 'scm:git:ssh://github.com/lemadane/JSSR.git'
                    url = 'https://github.com/lemadane/JSSR'
                }
            }
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading', '-Dnet.bytebuddy.experimental=true')
}

jmh {
    warmupIterations = 2
    iterations = 3
    fork = 1
    benchmarkMode = ['thrpt']
}
